# chaima

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  hatch_build.py  pyproject.toml  skills-lock.json
.github/workflows/: publish.yaml  test.yaml
alembic/: env.py
alembic/versions/: 0bd8ea844ff6_add_storage_location_color.py  45d05a16c2d1_add_orders_feature.py  49c7178e33a9_initial_schema.py  49e4d98b9c38_add_import_log_table.py  ab54b01e27a9_add_container_ordered_by_name.py  b4e7c1a29301_drop_chemical_image_path_and_structure_source.py  bb0857b3e226_initial_schema.py  c100a96867a6_initial_schema.py  f608356fe048_add_analytics_tables_and_user_login_.py
frontend/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: auth.spec.ts  chemical-pubchem.spec.ts  chemicals.spec.ts  container-received-date.spec.ts  container-supplier.spec.ts  darkmode-toggle.spec.ts  import-wizard.spec.ts  navigation.spec.ts  settings.spec.ts  storage.spec.ts
frontend/src/: App.tsx  main.tsx  theme.ts
src/chaima/: app.py  auth.py  cli.py  config.py  db.py  dependencies.py
tests/: conftest.py  test_config.py  test_db_pragmas.py  test_seed.py
tests/fixtures/: import_sample.csv  import_sample.xlsx
tests/test_api/: conftest.py  test_admin_analytics.py  test_admin_analytics_writes.py  test_chemical_structure.py  test_chemicals.py  test_chemicals_extract.py  test_compatibility.py  test_containers.py  test_containers_image.py  test_export.py  test_ghs.py  test_groups.py  test_groups_admin.py  test_hazard_tags.py  test_import.py  test_invites.py  test_orders.py  test_projects.py  test_pubchem.py  test_pubchem_enrich.py  test_pubchem_vendors.py  test_sds_upload.py  test_static.py  test_storage_locations.py  test_suppliers.py  test_suppliers_lead_time.py  test_user_main_group.py  test_users.py  test_wishlist.py
tests/test_middleware/: test_slow_request.py
tests/test_models/: test_analytics.py  test_chemical.py  test_container.py  test_ghs.py  test_group.py  test_hazard.py  test_invite.py  test_storage.py  test_supplier.py  test_user.py  test_user_login_counters.py
tests/test_services/: conftest.py  test_analytics.py  test_auth_login_hooks.py  test_chemicals.py  test_chemicals_secret.py  test_containers.py  test_enrich.py  (+23 more)
(+197 files in other folders)
