[project]
name = "chaima"
dynamic = ["version"]
description = "Chemical AI Manager"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.3",
    "fastapi-users>=15.0.5",
    "sqlmodel>=0.0.38",
]
[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0-dev"

[tool.hatch.build.hooks.vcs]
version-file = "src/chaima/_version.py"
