[project]
name = "chaima"
dynamic = ["version"]
description = "Chemical AI Manager"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "fastapi>=0.135.3",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "pydantic-settings>=2.13.1",
    "sqlmodel>=0.0.38",
    "typer>=0.21.1",
    "uvicorn>=0.40.0",
]

[project.scripts]
chaima = "chaima.cli:app"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0-dev"

[tool.hatch.build.hooks.vcs]
version-file = "src/chaima/_version.py"

[tool.hatch.build.hooks.custom]

[tool.hatch.build.targets.wheel]
packages = ["src/chaima"]
artifacts = ["src/chaima/static/"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
